# XEMFEM

./: .gitignore  Dockerfile  README.md  TODO  docker-compose.yml  dothethings  requirements.txt  run_shell.sh
.Trash-1000/files/: phi.gf
.Trash-1000/info/: phi.gf.trashinfo
BasicTPC/: dothethings
BasicTPC/Old/src/: CMakeLists.txt  boundary_conditions.cpp  constants.h  final_geometry.geo.in  geometry.geo.in  solver.cpp  solver.h
BasicTPC/src/: CMakeLists.txt  ComputeElectricField.cpp  README.md  boundary_conditions.cpp  constants.h  geometry.cpp  main.cpp  solver.cpp
BasicTPC/src/geometry/: debugging_things.cpp  debugging_things.h  main.cpp  partition_tools.cpp  tpc  tpc_occ.brep  tpc_occ.geo_unrolled
Capacitor/2D/: dothethings
Capacitor/2D/src/: 2d_OC_geometry.geo.in  2d_basic_geometry.geo.in  CMakeLists.txt  ComputeElectricField.cpp  ComputeElectricField.h  README.md  boundary_conditions.cpp  boundary_conditions.h  constants.h  geometry.geo.in  geometry.h  main.cpp  solver.cpp
XENONnT/: Untitled.ipynb
docker/: Dockerfile  docker-compose.yml  requirements.txt
geometries/: README.md
geometries/2DAxisymmCapacitor/: README.md  main.cpp
geometries/2DCapacitor/: embedded_config.h
geometries/2DTPC/: CMakeLists.txt  README.md  config.yaml
geometries/3D_TPC/: CMakeLists2.txt  main.cpp  partition_tools.h
geometries/SR3nTCOMSOLVerification/: config.yaml  config_autogen.yaml  make_elements.py  phys_map.txt  salome_script copy 2.py  salome_script copy.py  salome_script.py  test.py  testing.py
geometry/: Dockerfile.salome  README.md  SR0_constants.py  SR2_constants.py  SR3_Voltages.py  SR3_constants.py  build_geometry.py  config.yaml  debug_constants.py  design_constants.py  helper_functions.py  make_mesh.sh  postprocess_mesh.py  postprocess_mesh_soft.py  salome-container-entrypoint.sh
geometry/COMSOLValidation/: README.md  createCOMSOLmesh.py  make_plots.py  plot_xemfem_angle_only.py
geometry/COMSOLValidation/ConductingWedge/: ConductingWedge.mph  conducting_wedge_geometry_def.py  config.yaml
geometry/COMSOLValidation/ConductingWedge/mesh/: config_autogen.yaml  phys_map.txt
geometry/COMSOLValidation/TwoWires/: TwoWires.mph  config.yaml  two_wires_geometry_def.py
geometry/COMSOLValidation/TwoWires/mesh/: config_autogen.yaml  phys_map.txt
geometry/COMSOLValidation/eccentric_coaxial_cylinder/: CoaxialCylinder.mph  config.yaml  eccentric_coaxial_cylinder_geometry_def.py
geometry/COMSOLValidation/eccentric_coaxial_cylinder/mesh/: config_autogen.yaml  phys_map.txt
geometry/COMSOLValidation/parallel_plate_capacitor/: ParallelPlateCapacitor.mph  config.yaml  parallel_plate_geometry_def.py
geometry/COMSOLValidation/parallel_plate_capacitor/mesh/: config_autogen.yaml  phys_map.txt
geometry/OldMisc/: README.md  SR3_geometry.py  makeBCElemsYAML.py
geometry/OldMisc/2DAxisymmCapacitor/: config.yaml
geometry/OldMisc/2DCapacitor/: config.yaml  main.cpp
geometry/OldMisc/2DTPC/: embedded_config.h.in
geometry/OldMisc/3D_TPC/: geometry_constants.h  solver_params.yaml
geometry/createGeometryFromCAD/: ExportSliceToDXF.py  README.md  cleanup_config.yaml  cleanup_jsons.py  createSerialization.py  docker-compose.yaml  extract_points_list_from_slice.py  extract_points_list_from_slice_SALOME.py  naming_convention.csv  naming_convention.txt  naming_convention_broken.csv  plot_all.py  plot_component_svg.py  pts_postprocessing.py  run_docker.sh  setup_freecad_docker.sh  testing.ipynb
geometry/createGeometryFromCAD/helpers/: debug_spline.py  dxf_in_freecad.py  plot_dxf.py
geometry/createGeometryFromCAD/pts_overwrites/: GXe.json  LXe.json  PMTs.json  XENT-TPC_20250428_overwrites.yaml
geometry/geometries/: SR0_constants.py  SR3_constants.py  debug_autogen_constants.py
geometry/mesh/: config_autogen.yaml  phys_map.txt
geometry/voltages/: SR0_Voltages.py  SR2_Voltages.py
logo/: README.md  render_logo.py  xemfem_logo_mesh.py
src/: CMakeLists.txt  ComputeElectricField.h  README.md  boundary_conditions.cpp  cmdLineParser.cpp  cmdLineParser.h  load_mesh.cpp  load_mesh.h  main.cpp  solver.cpp
src/PlottingAndMetrics/: README.md  main.cpp
src/SolverCore/: CMakeLists.txt  ComputeElectricField.cpp  ComputeElectricField.h  README.md  boundary_conditions.cpp  boundary_conditions.h  load_mesh.cpp  load_mesh.h  main.cpp  mesh_tools.cpp  mesh_tools.h  parallelization.cpp  parallelization.h  solver.cpp  solver.h  solver_api.cpp  solver_api.h  tmop_tools.cpp  tmop_tools.h
src/Sweep/: CIV.cpp  CIV.h  CMakeLists.txt  README.md  config_modification.cpp  config_modification.h  field_spread.cpp  field_spread.h  main.cpp  optimization.cpp  optimization.h  sweeps.cpp  sweeps.h  trace_fieldlines.cpp  trace_fieldlines.h  trace_fieldlines_MPI.cpp  trace_fieldlines_MPI.h
src/Sweep/common_tracing/: tracing_objects.cpp  tracing_objects.h
src/Sweep/trace_fieldlines_overflow_for_future/: semi_working.cpp
src/cmdLineInteraction/: CMakeLists.txt  cmdLineInteraction.cpp  cmdLineInteraction.h
src/cmdLineParser/: CMakeLists.txt  cmdLineParser.cpp  cmdLineParser.h
src/config/: CMakeLists.txt  Config.cpp  Config.h  README  README.md
src/interpolator/: CMakeLists.txt  interpolator.cpp  interpolator.h
src/miscDebug/: 2  plot_CIV_boundary.py  plot_fieldlines.py
src/path_handler/: CMakeLists.txt  path_handler.cpp  path_handler.h
src/plotting/: CMakeLists.txt  FEMPlotVTK.cpp  FEMPlotVTK.h  _CMakeLists.txt  main.cpp  plot_config.ini  plotting_api.cpp  plotting_api.h
src/xemfem/: CMakeLists.txt  main.cpp
utils/MPIMeshVisualization/: parmesh_to_paraview_with_MPIRank.cpp
